fixes positioning and improving readability on heros

--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,17 +1,18 @@
 .hero__teaser {
   position: relative;
-  height: 100%;
+  height: fit-content;
   overflow: hidden;
 }
 
 .hero__teaserText {
   position: absolute;
   left: 5%;
-  top: 60%;
+  bottom: 10px;
   max-width: 80%;
   font-size: 25px;
   font-weight: bold;
   color: white;
+  text-shadow: 1px 1px 3px black;
 }
 
 .hero__carousel {
