--- a/styles/components/swiper.css
+++ b/styles/components/swiper.css
@@ -1,6 +1,6 @@
 .swiper {
   width: 100%;
-  height: 400px;
+  height: fit-content;
 }
 
 .swiper-slide {
@@ -11,7 +11,7 @@
 
 .swiper-text {
   position: absolute;
-  top: 70%;
+  bottom: 10px;
   left: 20px;
   font-size: 35px;
   font-weight: bold;
