--- a/styles/components/teaser.css
+++ b/styles/components/teaser.css
@@ -12,6 +12,9 @@
 
 .teaser__text {
   margin: 16px 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .teaser__link {
